--- a/spoonacularTest.html
+++ b/spoonacularTest.html
@@ -9,7 +9,7 @@
 <script>
 	function getSource(id){
 		$.ajax({
-		url:"https://api.spoonacular.com/recipes/"+id+"/information?apiKey=INSERT_KEY_HERE",
+		url:"https://api.spoonacular.com/recipes/"+id+"/information?apiKey=99a01e3d7525405894929bfbec77ffa3",
 		success: function(res) {
 			document.getElementById("sourceLink").innerHTML=res.sourceUrl
 			document.getElementById("sourceLink").href=res.sourceUrl
@@ -18,10 +18,11 @@
 	}
 	function getRecipe(q){
 		$.ajax({
-			url:"https://api.spoonacular.com/recipes/search?apiKey=INSERT_KEY_HERE&number=1&query="+q,
+			url:"https://api.spoonacular.com/recipes/complexSearch?apiKey=99a01e3d7525405894929bfbec77ffa3&addRecipeInformation=true&addRecipeNutrition=true&number=1&query="+q,
 			success: function(res) {
-			document.getElementById("output").innerHTML="<h1>"+res.results[0].title+"</h1><br><img src='"+res.baseUri+res.results[0].image+"' width='400' /><br>Ready in "+res.results[0].readyInMinutes+" minutes"
-			getSource(res.results[0].id)
+				console.log(res.results[0]);
+				document.getElementById("output").innerHTML="<h1>"+res.results[0].title+"</h1><br><img src='"+res.results[0].image+"' width='400' /><br>Ready in "+res.results[0].readyInMinutes+" minutes"
+				getSource(res.results[0].id)
 			}
 		});
 	}
