Changed input type to button
It's more compatible with the API call

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
 			<form id="f1" name="f1" class="search">
 				<input type="text" id="t1" name="t1" placeholder="Search recipes here..."
 				required="">
-				<input type="submit" name="b1" value="SEARCH" form="f1" onclick="getRecipe(document.getElementById('t1').value)">
+				<input type="button" name="b1" value="SEARCH" form="f1" onclick="getRecipe(document.getElementById('t1').value)">
 			</form>
-			
+						
 		</div>
 	</div>
 </body>
