add results to html

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
 				required="">
 				<input type="button" name="b1" value="SEARCH" form="f1" onclick="getRecipe(document.getElementById('t1').value)">
 			</form>
-						
+		<div id="results"></div>
+
 		</div>
 	</div>
 </body>
