--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="main">
 		<div class="navbar">
-			<div class="logo">LOGO</div>
+			<div class="logo"><i>PinkLemonade</i></div>
 			<ul>
 				<li><a href="#" class="active">HOME</a></li>
 				<li><a href="#">ABOUT</a></li>
