--- a/src/spoonacularTest.html
+++ b/src/spoonacularTest.html
@@ -18,7 +18,7 @@
 	}
 	function getRecipe(q){
 		$.ajax({
-			url:"https://api.spoonacular.com/recipes/complexSearch?apiKey=99a01e3d7525405894929bfbec77ffa3&addRecipeInformation=true&addRecipeNutrition=true&number=1&query="+q,
+			url:"https://api.spoonacular.com/recipes/complexSearch?apiKey="+key+"&addRecipeInformation=true&addRecipeNutrition=true&number=1&query="+q,
 			success: function(res) {
 				console.log(res.results[0]);
 				document.getElementById("output").innerHTML="<h1>"+res.results[0].title+"</h1><br><img src='"+res.results[0].image+"' width='400' /><br>Ready in "+res.results[0].readyInMinutes+" minutes"
